# paratemp

./: LICENSE  README.md  pyproject.toml
docs/: advanced_topics.md  diagnostics.md  distributions.md  implementation.md  overview.md  references.md  temperature_and_replicas.md  theory.md
examples/: 1d_demo.py
src/paratemp/: __init__.py  core.py
src/paratemp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
